--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "homepage": "https://www.grand-mentor.com/",
   "private": true,
   "dependencies": {
+    "core-js": "^3.9.1",
     "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "simplebar": "^3.0.0-beta.1"
+    "react-scripts": "^4.0.3",
+    "simplebar": "3.0.0-beta.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,5 +19,17 @@
     "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
